--- a/README
+++ b/README
@@ -10,7 +10,7 @@ homeshick symlink dotfiles
 homeshick pull
 homeshick clone andrewjluo/dotfiles
 
-To install Neobundle
+To install Vim-Plug
 ---------------------------------
-curl https://raw.githubusercontent.com/Shougo/neobundle.vim/master/bin/install.sh | sh
-
+curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
+    https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
