--- a/README
+++ b/README
@@ -5,12 +5,21 @@ printf '\nsource "$HOME/.homesick/repos/homeshick/homeshick.sh"' >> $HOME/.bashr
 
 To get the files
 --------------------------
+homeshick clone andrewjluo/dotfiles
 homeshick cd dotfiles
 homeshick symlink dotfiles
 homeshick pull
-homeshick clone andrewjluo/dotfiles
 
 To install Vim-Plug
 ---------------------------------
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+:PlugInstall
+
+Brew Setup
+----------------------------------
+brew install neovim
+brew install fzf
+brew install python3
+pip3 install --user neovim
+
