--- a/README
+++ b/README
@@ -21,5 +21,6 @@ Brew Setup
 brew install neovim
 brew install fzf
 brew install python3
-pip3 install --user neovim
+brew install python@2
+pip3 install --user neovim OR brew install neovim
 
